add input checking functions

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <label for="bRead">Read: </label>
                 <input type="radio" id="yes" name="readValue" value="yes">
                 <label for="yes">Yes</label>
-                <input type="radio" id="no" name="readValue" value="no">
+                <input type="radio" id="no" name="readValue" value="no" checked>
                 <label for="no">No</label>
                 <br>
                 <button id="submitBookBtn">Add</button>
