add localStorage function - can store the books with information

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <div id="container">
             <h1>My library</h1>
+            <button id="updateStorageBtn">update</button>
             <div id="addBookForm" class="submit_form">
                 <button id="closeFormBtn"><i class="fas fa-window-close" style="transform: scale(2);"></i></button>
                 <div>Enter information of the new book</div>
@@ -30,6 +31,7 @@
         <!--<script src="test.js"></script>-->
         <script src="script.js"></script>
         <script src="form.js"></script>
+        <script src="storage.js"></script>
         <script src="https://kit.fontawesome.com/6af8588f7a.js" crossorigin="anonymous"></script>
     </body>
 </html>
