--- a/index.html
+++ b/index.html
@@ -28,10 +28,21 @@
             </div>
             <button id="submitBtn">Add a new book</button>
         </div>
+
+        <pre id="object"></pre>
         <!--<script src="test.js"></script>-->
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+            https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-analytics.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-database.js"></script>
+
         <script src="script.js"></script>
         <script src="form.js"></script>
         <script src="storage.js"></script>
+        <script src="firebase.js"></script>
         <script src="https://kit.fontawesome.com/6af8588f7a.js" crossorigin="anonymous"></script>
     </body>
 </html>
